# teapot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  USAGE.md
.claude/: settings.local.json
src/: CMakeLists.txt  complete.c  display.c  display.rs  eval.rs  fileio.rs  functions.rs  lib.rs  main.c  main.rs  parser.rs  scanner.c  scanner.rs  sheet.rs  token.rs  utils.rs
src/fileio/: calamine_import.rs  context.rs  html.rs  latex.rs  sc.rs  tbl.rs  wk1.rs  xdr.rs  xlsx.rs
