[package]
name = "teapot"
version = "2.3.0"
edition = "2021"
authors = ["Original: Michael Haardt", "Current Maintainer: Joerg Walter"]
description = "Table Editor And Planner, Or: Teapot - A spreadsheet program"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = { version = "0.28.0", features = ["all-widgets"] }
crossterm = "0.27.0"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
flate2 = "1.0"
thiserror = "1.0"
unicode-width = "0.1.10"
calamine = "0.34.0"
rust_xlsxwriter = "0.94.0"
regex = "1"
chrono = "0.4"

[lib]
name = "teapotlib"
path = "src/lib.rs"

[[bin]]
name = "teapot"
path = "src/main.rs"
